# code-samples

./: .gitignore  README.md  pom.xml
algorithm-sample/: README.md  pom.xml
awk-sample/: awk.md  passwd_check.awk  program.awk  random.awk  tally.awk  word_usage.awk
awk-samples/: cars.csv  list_cars.awk  report.awk
bash-sample/: bash_array.sh  java.sh  list_proc_mem.sh  log_counter.sh  mysql_backup.sh  nc.sh
bash-sample/process/: main.sh  sub.sh
bash-samples/: README.md  bash.md  bash.sh  best_practices.sh  remove_duplicates.sh  ubuntu_clean_cache.sh
bigdata-sample/: README.md  pom.xml
bigdata-sample/hdfs-sample/: pom.xml
bigdata-sample/mapreduce-sample/: pom.xml
bigdata-samples/: README.md  pom.xml
bigdata-samples/hadoop-sample/: pom.xml
bigdata-samples/hadoop-sample/src/test/resources/: log4j.properties
clickhouse-sample/: pom.xml
clickhouse-sample/system_monitor/: distributed_system_tables.sql  statistics.sql
clickhouse-sample/zookeeper/config/: java.env  zoo.cfg  zoo.cfg.dynamic
cmake-cpack-sample/: CMakeLists.txt
cmake-cpack-sample/src/cli/: main.c
cmake-cpack-sample/src/include/: greet.h
cmake-cpack-sample/src/lib/: greet.c
conf-samples/: README.md
conf-samples/logback/: logback.xml
cpp-samples/: CMakeLists.txt
cpp-samples/cpp-std-sample/: CMakeLists.txt
cpp-samples/cpp-std-sample/src/main/cpp/: access_control.cc  data_type.cc  enum.cc  string.cc  value_category.cc
cpp-samples/cpp-zookeeper-client-sample/: CMakeLists.txt  main.cpp
cpp-samples/cpp-zookeeper-client-sample/include/: config.h
cpp-std-sample/: .clang-format  CMakeLists.txt  access_control.cc  collection.cc  sizeof.cc
cpp-std-sample/net/unix_socket/: server.c
cpp-std-sample/src/main/cpp/: bit.cc  data_type.cc  initialization.cc  literal.cc  smart_pointer.cc  string.cc  value_category.cc
doris-sample/: pom.xml
doris-sample/src/main/scripts/: olap.sh  udf_install.sql
hadoop-sample/: pom.xml
hadoop-sample/src/main/resources/: log4j.properties
hbase-sample/: pom.xml
hive-sample/: pom.xml
hive-sample/sql/: all_data_types_ddl.sql  row_number.sql
hive-sample/src/main/resources/: log4j.properties
html-samples/: index.html
iceberg-sample/: pom.xml
impala-sample/: pom.xml
impala-sample/admission-control/: fair-scheduler.xml  llama-site.xml
impala-sample/impala_profile_log_parse/: parse-thrift-profile.py
impala-sample/impala_profile_log_parse/ExecStats/: ttypes.py
impala-sample/impala_profile_log_parse/Metrics/: ttypes.py
impala-sample/impala_profile_log_parse/RuntimeProfile/: ttypes.py
impala-sample/impala_profile_log_parse/Status/: ttypes.py
impala-sample/impala_profile_log_parse/Types/: ttypes.py
java-sample/: pom.xml
java-sample/alibaba-druid-sample/: pom.xml
java-sample/alibaba-druid-sample/src/test/resources/: issue-5494.sql
java-sample/antlr4-sample/: pom.xml
java-sample/antlr4-sample/src/main/codegen/: Calculator.g4
java-sample/cli-sample/: pom.xml
java-sample/cup-sample/: pom.xml
java-sample/cup-sample/src/main/cup/: parser.cup
java-sample/cup-sample/src/main/java/: Calculator.java  scanner.java
java-sample/gson-sample/: pom.xml
java-sample/guava-sample/: pom.xml
java-sample/hikaricp-sample/: pom.xml
java-sample/httpclient-sample/: pom.xml
java-sample/hutool-sample/: pom.xml
java-sample/ical4j-sample/: pom.xml
java-sample/jackson-sample/: pom.xml
java-sample/jackson-sample/src/main/resources/: array.xml
java-sample/jdbc-sample/: pom.xml
java-sample/jdk-sample/: pom.xml
java-sample/jdk-sample/src/main/resources/: log4j.properties  sample.properties  sample_en_US.properties  sample_zh_CN.properties
java-sample/jooq-sample/: pom.xml
java-sample/junit-vintage-sample/: pom.xml
java-sample/junit4-sample/: pom.xml
java-sample/junit5-sample/: pom.xml
java-sample/log4j/: log4j.properties
java-sample/lombok-sample/: pom.xml
java-sample/lunar-sample/: pom.xml
java-sample/maven-sample/maven-conf/: simple-settings.xml
java-sample/powermock-sample/: pom.xml
java-sample/roaring-bitmap-sample/: pom.xml
java-samples/jdk-sample/: pom.xml
java-samples/log4j/: log4j.properties
java/java-template/: pom.xml
jdbc-sample/: pom.xml
kudu-sample/: pom.xml
kudu-sample/sql/: all_data_type.sql
makefile-sample/: pom.xml
makefile-sample/hello-world-sample/: Makefile
maven-sample/: pom.xml
maven-sample/maven-archetype-script-sample/: pom.xml
maven-sample/maven-archetype-script-sample/src/main/scripts/: archtypes.sh
maven-sample/maven-multimodule-sample/: pom.xml
maven-sample/maven-plugin/: README.md
maven-sample/maven-plugin-sample/: pom.xml
maven-sample/maven-repository-sample/: pom.xml
maven-sample/maven-takari-sample/: pom.xml
maven-sample/settings-sample/: simple-settings.xml
maven-samples/conf/: simple-settings.xml
maven-samples/maven-archetype/: README.md
maven-samples/maven-plugin/: README.md
npm-sample/: pom.xml
postgresql-sample/: pom.xml
postgresql-sample/postgresql-pljava-sample/: README.md  pom.xml
postgresql-sample/postgresql-plpgsql-sample/: pom.xml
prometheus-sample/: pom.xml
prometheus-sample/config/systemd/: prometheus.service
spark-sample/: pom.xml
spark-sample/src/main/resources/: example.csv
spark-sample/src/main/scripts/: spark_command_sample.sh
starrocks-sample/: pom.xml
starrocks-sample/src/main/resources/: data_types_sample.sql
starrocks-sample/src/main/scripts/: datetime_function_sample.sql  information_schema.sql  olap.sh  udf_install.sql
windows-sample/: pom.xml
zookeeper-sample/: pom.xml
zookeeper-sample/config/systemd/: zookeeper.service
(+613 files in other folders)
