cmake_minimum_required(VERSION 3.0)
project(cpp_std_sample)

set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH build)

add_executable(hello_world src/main/cpp/hello_world.cpp)
add_executable(string src/main/cpp/string.cc)
add_executable(bit src/main/cpp/bit.cc)
add_executable(net.unix_socket.server src/main/cpp/net/unix_socket/server.c)
add_executable(net.unix_socket.client src/main/cpp/net/unix_socket/client.c)
add_executable(sizeof src/main/cpp/sizeof.cc)
add_executable(data_type src/main/cpp/data_type.cc)
add_executable(access_control src/main/cpp/access_control.cc)
add_executable(collection src/main/cpp/collection.cc)